--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
+
+
+*{
+  
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+.container{
+  position: absolute;
+  top:50%;
+  left:50%;
+  transform: translate(-50%,-50%);
+  margin: 0 auto;
+  width:250px;
+  text-align: center;
+  border: 5px solid black;
+  background: black;
+  border-radius: 10px;
+  
+}
+
+.keypad{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  grid-auto-rows: minmax(60px,auto);
+}
+
+.display{
+  height:60px;
+  width:97%;
+  background: black;
+  border: none;
   color: white;
+  font-size: 28px;
+  text-align: right;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+#clear{
+  grid-column: 1/3;
+  grid-row: 1;
 }
 
-.App-link {
-  color: #61dafb;
+#equal{
+  grid-column: 3/5;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button{
+  margin: 5px;
+  border-radius: 5px;
+  border:none;
+  cursor: pointer;
+  font-weight: 500;
+  color: white;
+  background-color: rgb(32, 37, 37);
+}
+
+.sky{
+  background-color: #54e0f3;
+  color: black;
 }
